# SofaOptimisation

./: .gitignore  README.md  pyproject.toml
docs/: porting-guide.md
examples/cantilever/: README.md  dashboard.py  project.py  run.py  scene.py
examples/cube_drop/: README.md  dashboard.py  project.py  run.py  scene.py
src/sofaopt/: __init__.py  project.py
src/sofaopt/core/: __init__.py  algorithm.py  envkeys.py  io.py  orchestrator.py  runconfig.py  scoring.py  sofa_runner.py  state.py  trial_state.py  trialprep.py  utils.py
src/sofaopt/core/generation/: __init__.py  finalize.py  launch.py  plan.py  progress.py  runner.py
src/sofaopt/dashboard/: __init__.py  analyze_io.py  app.py  context.py
src/sofaopt/dashboard/callbacks/: __init__.py  config.py  monitoring.py  optimize.py  scenes.py
src/sofaopt/dashboard/data/: __init__.py  cache.py
src/sofaopt/dashboard/plotting/: bounds.py  colors.py  compute.py  performance.py  traces.py
src/sofaopt/dashboard/process/: __init__.py  process_manager.py
src/sofaopt/dashboard/ui/: __init__.py
src/sofaopt/dashboard/ui/progress/: __init__.py  builders.py  helpers.py  panels.py
src/sofaopt/dashboard/ui/tabs/: __init__.py  bounds.py  config.py  optimize.py  performance.py  progress.py  scenes.py  styles.py
src/sofaopt/scene/: __init__.py
